--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-	
-	<canvas id="canvas">
-	</canvas>
+	<div id="main">
+        <canvas id="canvas">
+        </canvas>    
+    </div>
+    <span>by <a href="https://ganeshmkumar.github.io" target="_blank">GaNeShKuMaRm </a> ☺</span>
+    <script src="js/config.js"></script>
+    <script src="js/draw_component.js"></script>
 	<script src="js/script.js"></script>
     </body>
 </html>
